# stanford-carla-toolbox

./: .gitignore  .travis.yml  CMakeLists.txt  Project.toml  README.md  Setup.md
cmake/: FindJulia.cmake
data/: interaction_ab1b2cd_paramPoly3.xodr  scenelist_ours.jld  scenes4carla.jld
examples/: CMakeLists.txt  README.md  autosim-spawn-vehicles.jl  autosim-spawn-vehicles.md  interaction-dataset-dr-chn-merge-PF.jl  interaction-dataset-dr-chn-merge-base.jl  main.cpp  spawn-vehicle.jl  spawn-vehicle.md
python/examples/: README.md  spawn-vehicle-py.md  spawn_vehicle.py
python/sensors/: cameras.py
python/tests/: utils_tests.py
python/utils/: actor.py  client.py  common.py  world.py
src/: StanfordCarlaToolbox.jl  adm_records.jl  adm_scenario.jl  autosim_utils.jl  client_utils.jl  scenario_utils.jl
tests/: CMakeLists.txt  stressTest.cpp  stress_test.jl
